--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -241,22 +241,35 @@ $heading3: 32px;
 
 .tooltip_info {
     position: relative;
+    display: block;
     z-index: 99;
     outline: none;
 	cursor: pointer;
+    input[type="checkbox"]{
+        opacity: 0;
+        visibility: hidden;
+    }
     .tooltip_msg {
     	@include tooltipMessageBox();
         position: absolute;
 	    right: -15px;
-	    top: 52px;
-	    display: none;
+	    top: 60px;
+	    opacity: 0;
+        visibility: hidden;
+        transition: visibility 0.3s, opacity 0.3s, top 0.3s;
 	    cursor: default;
 	    .close{
 	    	cursor: pointer;
 	    }
 
     }
-    &.showTooltip .tooltip_msg{
-    	display: block;
+    &:focus{
+        pointer-events: none;
+        .tooltip_msg{
+            top: 52px;
+            opacity: 1;
+            visibility: visible;
+            pointer-events: auto;    
+        }
     }
 }
